メニュー画面の作成

--- a/Diary-Sample/Views/Diary/Index.cshtml
+++ b/Diary-Sample/Views/Diary/Index.cshtml
@@ -1,8 +1,58 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "メニュー";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model IndexViewModel
+<div class="container">
+    <div class="row">
+        <div class="col-8">
+            <table class="table table-bordered table-hover diary_list">
+                <tr class="theme_diary_title">
+                    <th class="no">No</th>
+                    <th class="title">タイトル</th>
+                    <th class="post_date">投稿日</th>
+                </tr>
+@foreach (DiaryRow item in Model.DiaryList) {
+                <tr class="theme_diary_content">
+                    <td>@item.No</td>
+                    <td><a href="./diary.html">@item.Title</a></td>
+                    <td>@item.PostDate</td>
+                </tr>
+}
+            </table>
+        </div>
+        <div class="col-4">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1">
+            <input type="button" id="create" class="btn btn-sm theme" value="新規追加" onclick="window.location.href = './create.html';" />
+        </div>
+        <div class="col-7">
+            <ul class="pagination justify-content-end">
+                <li class="page-item"><a class="page-link theme" href="#">1</a></li>
+                <li class="page-item"><a class="page-link text-secondary" href="#">2</a></li>
+                <li class="page-item"><a class="page-link text-secondary" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link text-secondary" href="#">&gt;&gt;</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-4">
+        </div>
+    </div>
+</div>
+<br/>
+<br/>
+<!-- toast -->
+<div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+    <strong class="mr-auto">Notification</strong>
+    <small class="text-muted">just now</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="toast-body">
+    登録完了しました。
+    </div>
 </div>
