新規登録画面の作成

--- a/Diary-Sample/wwwroot/css/style.css
+++ b/Diary-Sample/wwwroot/css/style.css
@@ -1,7 +1,10 @@
 body {
     font-family: "BIZ UDGothic", Arial, Helvetica, sans-serif, monospace;
     font-weight: bold;
-  }
+}
+form {
+    display: inline;
+}
 /**
 * テーマカラー
 * DBで管理できると良いね。
