--- a/Diary-Sample/Views/Menu/Index.cshtml
+++ b/Diary-Sample/Views/Menu/Index.cshtml
@@ -2,6 +2,29 @@
     ViewData["Title"] = "メニュー";
 }
 @model MenuViewModel
+@if(Model.Notification != string.Empty){
+<!-- toast -->
+<div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="toast-header" class="toast-header bg-warning">
+    <strong class="mr-auto">Notification</strong>
+    <small>just now</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    <div class="toast-body">
+        <span id="toast_message"></span>
+    </div>
+</div>
+
+<script>
+    window.onload = function() {
+
+        $('#toast_message').text("@Html.Raw(Model.Notification)");
+        $('#message').toast('show');
+    }
+</script>
+}
 <div class="container">
     <div class="row">
         <div class="col-8">
@@ -25,27 +48,29 @@
     </div>
     <div class="row">
         <div class="col-1">
-            <input type="button" id="create" class="btn btn-sm theme" value="新規追加" onclick="window.location.href = './create.html';" />
+            <form method="get">
+                <button id="create" class="btn btn-sm theme text-nowrap" asp-controller="Menu" asp-action="NewEntry">新規登録</button>
+            </form>
         </div>
         <div class="col-7">
             <ul class="pagination justify-content-end">
 @if(Model.NowPage > 1){
     var prevPage = Model.NowPage - 1;
                 <li class="page-item">
-                    <a class="page-link text-secondary" asp-area="" asp-controller="Menu" asp-action="Paging" asp-route-page=@prevPage>&lt;&lt;</a>
+                    <a class="page-link text-secondary" asp-controller="Menu" asp-action="Paging" asp-route-page=@prevPage>&lt;&lt;</a>
                 </li>
 }
 @for(int i = 1; i < Model.TotalPageNumber + 1; i++) {
     @if (Model.NowPage == i){
-                <li class="page-item"><a class="page-link theme" asp-area="" asp-controller="Menu" asp-action="Paging" asp-route-page=@i>@i</a></li>
+                <li class="page-item"><a class="page-link theme" asp-controller="Menu" asp-action="Paging" asp-route-page=@i>@i</a></li>
     } else {
-                <li class="page-item"><a class="page-link text-secondary" asp-area="" asp-controller="Menu" asp-action="Paging" asp-route-page=@i>@i</a></li>
+                <li class="page-item"><a class="page-link text-secondary" asp-controller="Menu" asp-action="Paging" asp-route-page=@i>@i</a></li>
     }
 }
 @if(Model.NowPage < Model.TotalPageNumber){
     var nextPage = Model.NowPage + 1;
                 <li class="page-item">
-                    <a class="page-link text-secondary" asp-area="" asp-controller="Menu" asp-action="Paging" asp-route-page=@nextPage>&gt;&gt;</a>
+                    <a class="page-link text-secondary" asp-controller="Menu" asp-action="Paging" asp-route-page=@nextPage>&gt;&gt;</a>
                 </li>
 }
             </ul>
@@ -56,16 +81,3 @@
 </div>
 <br/>
 <br/>
-<!-- toast -->
-<div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-    <strong class="mr-auto">Notification</strong>
-    <small class="text-muted">just now</small>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-    </div>
-    <div class="toast-body">
-    登録完了しました。
-    </div>
-</div>
