--- a/Diary-Sample/Views/Create/Index.cshtml
+++ b/Diary-Sample/Views/Create/Index.cshtml
@@ -30,9 +30,11 @@
         <div class="col-8">
             <form asp-controller="Create" asp-action="Create" method="post">
                 <input class="form-control form-control-lg" type="text" placeholder="タイトルを入力してください" asp-for="Title">
+                <span asp-validation-for="Title" class="text-danger"></span>
                 <br/>
-                <textarea class="form-control" id="updFormControlTextarea1" rows="15" placeholder="本文を入力してください" asp-for="Content"></textarea>
-                <!-- Modal -->
+                <textarea class="form-control" id="updFormControlTextarea1" rows="15" placeholder="本文を入力してください" asp-for="Content" ></textarea>
+                <span asp-validation-for="Content" class="text-danger"></span>
+            <!-- Modal -->
                 <div class="modal fade" id="updModal" tabindex="-1" role="dialog" aria-labelledby="updModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -40,7 +42,7 @@
                             <h5 class="modal-title" id="updModalLabel">登録します。よろしいですか？</h5>
                             </div>
                             <div class="modal-footer">
-                                <button class="btn theme_positive" asp-controller="Create" asp-action="Create">はい</button>
+                                <button class="btn theme_positive" asp-controller="Create" asp-action="Create" >はい</button>
                                 <button class="btn theme_cancel" data-dismiss="modal">いいえ</button>
                             </div>
                         </div>
@@ -65,3 +67,9 @@
 </div>
 <br/>
 <br/>
+@*
+  クライアントチェックはポップアップとの兼ね合いで行わない
+  @section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+  }
+*@
