参照画面と更新画面
更新成功時に、登録画面と同じようにメッセージを出したいが未実装。
更新処理でエラー発生時は、とりあえず以前のエラー画面遷移にしている。
メニュー画面にて、参照画面へのリンクの処理を追加している。
（不要なら外します）

--- a/Diary-Sample/Views/Menu/Index.cshtml
+++ b/Diary-Sample/Views/Menu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     ViewData["Title"] = "メニュー";
 }
 @model MenuViewModel
@@ -39,7 +39,7 @@ var no = i + 1 + ((Model.NowPage - 1) * MenuViewModel.PageCount);
 var item = Model.DiaryList[i];
                 <tr class="theme_diary_content">
                     <td>@no</td>
-                    <td><a href="./diary.html">@item.Title</a></td>
+                    <td><a asp-controller="Refer" asp-action="Index" asp-route-id=@item.Id >@item.Title</a></td>
                     <td>@item.PostDate</td>
                 </tr>
 }
