--- a/Mock/css/style.css
+++ b/Mock/css/style.css
@@ -115,7 +115,7 @@ table.diary_list td {
     color:white;
 }
 
-.certificate_link:link, .certificate_link:hover, .certificate_link:active, .certificate_link:visited {
+.certification_link:link, .certification_link:hover, .certification_link:active, .certification_link:visited {
     color: rgb(35, 65, 201);
     outline-color: white;
 }
@@ -131,3 +131,77 @@ table.diary_list td {
 .user_email {
     color: rgb(8, 209, 75) !important;
 }
+
+/* .nav-pills .nav-link.active {
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+  } */
+
+/**
+* 管理
+*/
+.manage_theme, .manage_theme:hover {
+    color: white;
+    background-color: rgb(81, 192, 192);
+    border-color: rgb(0, 255, 255);
+}
+.manage_theme:read-only, .manage_theme:focus {
+    background-color: rgb(81, 192, 192) !important;
+    color:gray;
+    border-color: rgb(0, 255, 255);
+}
+.manage_theme::selection {
+    color:white;
+}
+
+.manage_link:link, .manage_link:hover, .manage_link:active, .manage_link:visited {
+    color: rgb(35, 65, 201);
+    outline-color: white;
+}
+
+/**
+* アカウント一覧
+*/
+.theme_account_title {
+    font-family: "UD デジタル 教科書体 N-B", Arial, Helvetica, sans-serif, monospace;
+    color:white;
+    background-color: rgb(108, 139, 185);
+}
+.theme_account_title:hover{
+    color:white !important;
+    background-color: rgb(108, 139, 185) !important;
+}
+.theme_account_content {
+    font-family: "UD デジタル 教科書体 N-B", Arial, Helvetica, sans-serif, monospace;
+    color:gray;
+    background-color: rgb(238, 236, 223);
+}
+table.account_list {
+    font-size:10pt;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+table.account_list th.no {
+    width: 5%;
+}
+table.account_list th.post_date {
+    width: 10%;
+}
+table.account_list th.edit {
+    width: 5%;
+}
+table.account_list th {
+    font-family: "BIZ UDGothic", Arial, Helvetica, sans-serif, monospace;
+    font-weight: bold;
+}
+table.account_list td {
+    font-family: "BIZ UDGothic", Arial, Helvetica, sans-serif, monospace;
+    font-weight: bold;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: rgb(44, 113, 160);
+    border-color: rgb(44, 113, 160);
+  }
