--- a/Diary-Sample/Views/Create/Index.cshtml
+++ b/Diary-Sample/Views/Create/Index.cshtml
@@ -32,7 +32,7 @@
                 <input class="form-control form-control-lg" type="text" placeholder="タイトルを入力してください" asp-for="Title">
                 <span asp-validation-for="Title" class="text-danger"></span>
                 <br/>
-                <textarea class="form-control" id="updFormControlTextarea1" rows="15" placeholder="本文を入力してください" asp-for="Content" ></textarea>
+                <textarea class="form-control" rows="15" placeholder="本文を入力してください" asp-for="Content" ></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             <!-- Modal -->
                 <div class="modal fade" id="updModal" tabindex="-1" role="dialog" aria-labelledby="updModalLabel" aria-hidden="true">
@@ -42,8 +42,8 @@
                             <h5 class="modal-title" id="updModalLabel">登録します。よろしいですか？</h5>
                             </div>
                             <div class="modal-footer">
-                                <button class="btn theme_positive" asp-controller="Create" asp-action="Create" >はい</button>
-                                <button class="btn theme_cancel" data-dismiss="modal">いいえ</button>
+                                <button id="yes" class="btn theme_positive" asp-controller="Create" asp-action="Create" >はい</button>
+                                <button id="no" class="btn theme_cancel" data-dismiss="modal">いいえ</button>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
     <br/>
     <div class="row">
         <div class="col-2">
-                <button id="update" class="btn btn-sm theme" data-toggle="modal" data-target="#updModal" >登録</button>
+                <button id="create" class="btn btn-sm theme" data-toggle="modal" data-target="#updModal" >登録</button>
             <form method="get">
                 <button id="back" class="btn btn-sm theme_cancel" asp-controller="Create" asp-action="Back" >戻る</button>
             </form>
