--- a/Diary-Sample/Views/Refer/Index.cshtml
+++ b/Diary-Sample/Views/Refer/Index.cshtml
@@ -2,7 +2,7 @@
 @model Diary_Sample.Models.ReferViewModel
 
 @{
-    ViewData["Title"] = "日記";
+    ViewData["Title"] = "参照";
 }
 
 <form method="get">
@@ -16,9 +16,7 @@
                             <a id="edit" class="btn btn-sm theme" asp-controller="Edit" asp-action="Index" asp-route-id=@Model.Id>編集</a>
                         </div>
                     </div>
-                    <div class="card-body theme_diary_content">
-                        @Model.Content
-                    </div>
+                    <div class="card-body theme_diary_content">@Model.Content</div>
                 </div>
             </div>
             <div class="col-4">
