--- a/Diary-Sample/Views/Shared/_ManageLayout.cshtml
+++ b/Diary-Sample/Views/Shared/_ManageLayout.cshtml
@@ -2,14 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
+    <title>管理</title>
+    <link rel="stylesheet" href="./../lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./../css/manage.css" />
+    <script src="./../lib/jquery/dist/jquery.min.js"></script>
+    <script src="./../lib/js.cookie.min.js"></script>
 </head>
+    <script src="./../lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom mb-3 p-0 theme">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom mb-3 p-0 manage_theme">
             <div class="container">
                 <a class="navbar-brand text-light">日記</a>
                 <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -43,7 +45,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main class="pb-3">
             @RenderBody()
         </main>
     </div>
