--- a/Diary-Sample/Views/_ViewStart.cshtml
+++ b/Diary-Sample/Views/_ViewStart.cshtml
@@ -5,6 +5,10 @@
   {
     Layout = "_AuthLayout";
   }
+  else if(controller == "Manage")
+  {
+    Layout = "_ManageLayout";
+  }
   else
   {
     Layout = "_Layout";
