管理者用ユーザ登録画面追加

--- a/Diary-Sample/Views/Shared/_ManageLayout.cshtml
+++ b/Diary-Sample/Views/Shared/_ManageLayout.cshtml
@@ -44,6 +44,9 @@
             </div>
         </nav>
     </header>
+    @if(Model.Notification != string.Empty){
+    <partial name="_Toast" />
+    }
     <div class="container">
         <main class="pb-3">
             @RenderBody()
