--- a/Diary-Sample/Views/_ViewStart.cshtml
+++ b/Diary-Sample/Views/_ViewStart.cshtml
@@ -5,7 +5,7 @@
   {
     Layout = "_AuthLayout";
   }
-  else if(controller == "Manage")
+  else if(controller == "Manage" || controller == "CreateAccount")
   {
     Layout = "_ManageLayout";
   }
