--- a/Diary-Sample/Views/Manage/index.cshtml
+++ b/Diary-Sample/Views/Manage/index.cshtml
@@ -76,9 +76,12 @@ var confirmed = item.EmailConfirmed ? "済" : "未";
                 </form>
             </div>
             <div class="row">
-                <div class="col-1">
+                <div class="col-2">
+                    <form method="get">
+                        <button id="newEntry" class="btn btn-sm manage_theme" asp-controller="Manage" asp-action="NewEntry">登録</button>
+                    </form> 
                 </div>
-                <div class="col-11">
+                <div class="col-10">
                     <ul class="pagination justify-content-end">
 @if(Model.Page.existPrevPage()){
                         <li class="page-item">
