--- a/Diary-Sample/wwwroot/css/manage.css
+++ b/Diary-Sample/wwwroot/css/manage.css
@@ -5,6 +5,9 @@ body {
 ::selection {
     background: rgba(19, 94, 255, 0.411);
 }
+form {
+    display: inline;
+}
 
 /**
 * 管理
@@ -21,6 +24,32 @@ body {
 }
 .manage_theme::selection {
     color:white;
+}
+.manage_theme_positive {
+    color:white;
+    background-color: rgb(103, 145, 209);
+}
+.manage_theme_positive:hover {
+    color:white;
+    background-color: rgb(103, 145, 209);
+}
+.manage_theme_warning {
+    color: white;
+    background-color: rgb(255, 174, 181);
+}
+.manage_theme_warning:hover {
+    color: white;
+    background-color: rgb(255, 174, 181);
+}
+.manage_theme_cancel{
+    border : 1px solid darkgray;
+    color: black;
+    background-color: white;
+}
+.manage_theme_cancel:hover {
+    border : 1px solid darkgray;
+    color: black;
+    background-color: white;
 }
 
 
@@ -81,4 +110,7 @@ table.account_list td {
 
 .user_email {
     color: rgb(38, 8, 209) !important;
+}
+.password_explain {
+    font-size: 0.5rem;
 }
