--- a/Diary-Sample/Views/Shared/_ManageLayout.cshtml
+++ b/Diary-Sample/Views/Shared/_ManageLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Diary_Sample.Common
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -44,7 +45,7 @@
             </div>
         </nav>
     </header>
-    @if(Model.Notification != string.Empty){
+    @if(Model.NotificationType != ResultType.None){
     <partial name="_Toast" />
     }
     <div class="container">
