--- a/Diary-Sample/Views/Shared/_Toast.cshtml
+++ b/Diary-Sample/Views/Shared/_Toast.cshtml
@@ -1,17 +1,33 @@
 <!-- toast -->
+@using Diary_Sample.Common
 <div id="message" class="toast" data-delay="3000" role="alert" aria-live="assertive" aria-atomic="true">
-    <div id="toast-header" class="toast-header @Model.NotificationColor">
+@{
+    var type = "";
+    switch(Model.NotificationType) {
+        case ResultType.Normal :
+            type = "notification_theme_normal";
+            break;
+        case ResultType.Warning :
+            type = "notification_theme_warning";
+            break;
+        case ResultType.Error:
+            type = "notification_theme_error";
+            break;
+        default:
+            break;
+    }
+    <div id="toast-header" class="toast-header @type">
     <strong class="mr-auto">Notification</strong>
     <small>just now</small>
     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     </div>
+}
     <div class="toast-body">
         <span id="toast_message"></span>
     </div>
 </div>
-
 <script>
     window.onload = function() {
 
