管理者権限追加

--- a/Diary-Sample/Pages/Shared/_Layout.cshtml
+++ b/Diary-Sample/Pages/Shared/_Layout.cshtml
@@ -41,9 +41,9 @@
             &copy; 2020 - Diary_Sample</a>
         </div>
     </footer>
-    <scrip src="~/lib/jquery/dist/jquery.min.js"></scrip>
-    <scrip src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></scrip>
-    <scrip src="~/js/site.js" asp-append-version="true"></scrip>
-    @RenderSection("Scripts", required: false)
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scriptts", required: false)
 </body>
 </html>
