--- a/Diary-Sample/Views/Shared/_Layout.cshtml
+++ b/Diary-Sample/Views/Shared/_Layout.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc
 @inject UserManager<IdentityUser> userManager
@@ -32,9 +33,13 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link text-light">設定</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Manage" asp-action="Index">管理</a>
-                        </li>
+                        @{
+                            if (User.Identity.IsAuthenticated && User.IsInRole("manager")) {
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Manage" asp-action="Index">管理</a>
+                                </li>
+                            }
+                        }
                     </ul>
                     <ul class="navbar-nav">
 
