レビュー指摘修正（タイポ、フッターメニュースタイルが適応されていないのを修正）

--- a/Diary-Sample/Pages/Shared/_Layout.cshtml
+++ b/Diary-Sample/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer theme">
+    <footer class="border-top footer certification_theme">
         <div class="container" align="center">
             &copy; 2020 - Diary_Sample</a>
         </div>
@@ -44,6 +44,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scriptts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
