--- a/Diary-Sample/Views/Shared/_ManageLayout.cshtml
+++ b/Diary-Sample/Views/Shared/_ManageLayout.cshtml
@@ -54,7 +54,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer theme">
+    <footer class="border-top footer manage_theme">
         <div class="container" align="center">
             &copy; 2020 - Diary_Sample</a>
         </div>
